--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="center">
                     <div>
                         <img
-                            src="assets/images/dp_male.svg"
+                            src="assets/images/dp.png"
                             alt=""
                             class="rounded-circle"
                             height="200"
@@ -138,7 +138,7 @@
                         <div class="social-icons">
                             <a
                                 class="socialicon twitter"
-                                href=""
+                                href="https://twitter.com/Soreat_26"
                                 target="_blank"
                                 rel="author"
                             >
@@ -222,7 +222,7 @@
 
                             <a
                                 class="socialicon dribbble"
-                                href=""
+                                href="https://dribbble.com/soreat26"
                                 target="_blank"
                                 rel="author"
                             >
@@ -376,7 +376,7 @@
 
                             <a
                                 class="socialicon github"
-                                href=""
+                                href="https://github.com/soreat26"
                                 target="_blank"
                                 rel="author"
                             >
