header changed to violate circle

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <link
             id="favicon"
             rel="shortcut icon"
-            href="assets/images/favicon.png"
-            type="image/x-png"
+            href="assets/images/header.svg"
+            type="image/x-svg"
         />
         <!-- Font awesome icons -->
         <link
