--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
                             <a
                                 class="socialicon linkedin"
-                                href=""
+                                href="https://www.linkedin.com/in/soreat26/"
                                 target="_blank"
                                 rel="author"
                             >
@@ -276,7 +276,7 @@
 
                             <a
                                 class="socialicon codeforces"
-                                href=""
+                                href="https://codeforces.com/profile/soreat26"
                                 target="_blank"
                                 rel="author"
                             >
@@ -330,7 +330,7 @@
 
                             <a
                                 class="socialicon instagram"
-                                href=""
+                                href="https://codeforces.com/profile/soreat26"
                                 target="_blank"
                                 rel="author"
                             >
