--- a/education.html
+++ b/education.html
@@ -312,11 +312,10 @@
         </div>
         <div class="date date2">2017-2021</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
+            <h3 class="timelineHeading2">BCIC College, Mirpur</h3>
+            <h6>College</h6>
             <li>Top 1% in the department</li>
             <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
             <li>Athlete of the Year Award</li>
         </div>
       </div>
@@ -333,11 +332,10 @@
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
         <div class="date date3">2013-2017</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
+            <h2 class="timelineHeading3">Mirpur Govt. High School</h2>
             <h6>High School</h6>
             <li>Top 1% in the department</li>
             <li>Best undergraduate Reseracher</li>
-            <li>Betsy Schumacker Woman</li>
             <li>Athlete of the Year Award</li>
         </div>
       </div>
